# PixelStream

./: .env.template  .gitignore  CLAUDE.md  LICENSE  PixelStreamCLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: data-engineer.md  qa-engineer.md
.claude/skills/: build-backend.md  build-frontend.md  data-pipeline-check.md  debug-pipeline.md  download-models.md  qa-pipeline.md  ship-pixelstream.md  wire-up.md
dashboard/: package-lock.json  package.json
dashboard/src/: App.css  App.tsx  index.css  types.ts
dashboard/src/components/: ClassBarChart.tsx  DetectionFeed.tsx  DetectionOverlay.tsx  LatencyChart.tsx  ModelSwitch.tsx  StatusBar.tsx  VideoPlayer.tsx
dashboard/src/hooks/: useDetections.ts  useStats.ts
scripts/: download_models.py  download_video.sh  export_onnx.py  run_demo.sh
src/pixelstream/: config.py  schemas.py
src/pixelstream/dashboard/: api.py  broadcaster.py
src/pixelstream/inference/: base.py  mock.py  ultralytics_backend.py
src/pixelstream/processing/: batch_handler.py  stream_processor.py
src/pixelstream/producer/: frame_producer.py
src/pixelstream/storage/: delta_writer.py
tests/: conftest.py  test_batch_handler.py  test_inference.py  test_producer.py  test_schemas.py
