[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixelstream"
version = "0.1.0"
description = "Real-time CV streaming: Kafka → Spark → YOLOv11/RT-DETR → Delta Lake → React"
requires-python = ">=3.11"
dependencies = [
    "pyspark>=3.5.0,<4.0",
    "delta-spark>=3.2.0",
    "confluent-kafka>=2.6.0",
    "onnxruntime==1.18.0",  # CPU inference — last version with Intel Mac x86_64 wheels
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26.0,<2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "Pillow>=11.0.0",
]

[project.optional-dependencies]
# ultralytics needs torch (unavailable on Intel Mac via pip).
# To export ONNX models: conda install pytorch -c pytorch, then run scripts/export_models.py
inference = ["ultralytics>=8.3.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
pixelstream-producer = "pixelstream.producer.frame_producer:main"
pixelstream-spark    = "pixelstream.processing.stream_processor:main"
pixelstream-api      = "pixelstream.dashboard.api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pixelstream"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires Redpanda running (docker-compose up -d)",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

